attached_assets/Pasted--ERRORS-E-1756405031721_1756405031722.txt
=================================== ERRORS ====================================
_________________ ERROR collecting tests/test_integration.py __________________
.pythonlibs/lib/python3.11/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
.pythonlibs/lib/python3.11/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/nix/store/7d088dip86hlzri9sk0h78b63yfmx0a0-python3-3.11.13/lib/python3.11/importlib/__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
.pythonlibs/lib/python3.11/site-packages/_pytest/assertion/rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.pythonlibs/lib/python3.11/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/nix/store/7d088dip86hlzri9sk0h78b63yfmx0a0-python3-3.11.13/lib/python3.11/ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "/home/runner/workspace/tests/test_integration.py", line 1
E       assert vacancy.vacancy_id == \"test_123\"\n        assert vacancy.title == \"Test Position\"\n        assert vacancy.salary.salary_from == 50000\n        assert vacancy.salary.salary_to == 100000\n        assert vacancy.salary.currency == \"RUR\"\n
E   SyntaxError: unexpected character after line continuation character
=========================== short test summary info ===========================
ERROR tests/test_integration.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!